--- a/hindsight_experience_replay.ipynb
+++ b/hindsight_experience_replay.ipynb
@@ -6,13 +6,29 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0.]\n",
+      "[0. 0.]\n",
+      "[0. 0.]\n",
+      "[0. 0.]\n",
+      "[0. 0.]\n",
+      "[0. 0.]\n",
+      "[0. 0.]\n",
+      "[0. 0.]\n",
+      "[0. 0.]\n",
+      "[0. 0.]\n"
+     ]
+    },
+    {
      "ename": "IndexError",
      "evalue": "index -11 is out of bounds for axis 0 with size 10",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 36\u001b[0m\n\u001b[0;32m     34\u001b[0m     action \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(num_actions)\n\u001b[0;32m     35\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 36\u001b[0m     action \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margmax(q_network[state])\n\u001b[0;32m     38\u001b[0m \u001b[39m# take action and observe next state and reward\u001b[39;00m\n\u001b[0;32m     39\u001b[0m \u001b[39mif\u001b[39;00m action \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n",
+      "Cell \u001b[1;32mIn[1], line 36\u001b[0m\n\u001b[0;32m     34\u001b[0m     action \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(num_actions)\n\u001b[0;32m     35\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 36\u001b[0m     \u001b[39mprint\u001b[39m(q_network[state])\n\u001b[0;32m     37\u001b[0m     action \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margmax(q_network[state])\n\u001b[0;32m     39\u001b[0m \u001b[39m# take action and observe next state and reward\u001b[39;00m\n",
       "\u001b[1;31mIndexError\u001b[0m: index -11 is out of bounds for axis 0 with size 10"
      ]
     }
@@ -53,7 +69,7 @@
     "        if np.random.random() < epsilon:\n",
     "            action = np.random.randint(num_actions)\n",
     "        else:\n",
-    "            print(q_network[state])\n",
+    "            print(state, q_network[state])\n",
     "            action = np.argmax(q_network[state])\n",
     "        \n",
     "        # take action and observe next state and reward\n",
