--- a/hindsight_experience_replay.ipynb
+++ b/hindsight_experience_replay.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0. 0.]\n",
-      "[0. 0.]\n",
-      "[0. 0.]\n",
-      "[0. 0.]\n",
-      "[0. 0.]\n",
-      "[0. 0.]\n",
-      "[0. 0.]\n",
-      "[0. 0.]\n",
-      "[0. 0.]\n",
-      "[0. 0.]\n"
+      "0 [0. 0.]\n",
+      "-1 [0. 0.]\n",
+      "-2 [0. 0.]\n",
+      "-3 [0. 0.]\n",
+      "-4 [0. 0.]\n",
+      "-5 [0. 0.]\n",
+      "-7 [0. 0.]\n",
+      "-8 [0. 0.]\n",
+      "-9 [0. 0.]\n",
+      "-10 [0. 0.]\n"
      ]
     },
     {
@@ -28,7 +28,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 36\u001b[0m\n\u001b[0;32m     34\u001b[0m     action \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(num_actions)\n\u001b[0;32m     35\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 36\u001b[0m     \u001b[39mprint\u001b[39m(q_network[state])\n\u001b[0;32m     37\u001b[0m     action \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margmax(q_network[state])\n\u001b[0;32m     39\u001b[0m \u001b[39m# take action and observe next state and reward\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[2], line 36\u001b[0m\n\u001b[0;32m     34\u001b[0m     action \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(num_actions)\n\u001b[0;32m     35\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 36\u001b[0m     \u001b[39mprint\u001b[39m(state, q_network[state])\n\u001b[0;32m     37\u001b[0m     action \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margmax(q_network[state])\n\u001b[0;32m     39\u001b[0m \u001b[39m# take action and observe next state and reward\u001b[39;00m\n",
       "\u001b[1;31mIndexError\u001b[0m: index -11 is out of bounds for axis 0 with size 10"
      ]
     }
