hindsight_experience_replay

--- a/hindsight_experience_replay.ipynb
+++ b/hindsight_experience_replay.ipynb
@@ -2,6 +2,117 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import gym "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
+    "class HERReplayBuffer:\n",
+    "    def __init__(self, buffer_size):\n",
+    "        self.buffer_size = buffer_size\n",
+    "        self.buffer = []\n",
+    "        self.idx = 0\n",
+    "\n",
+    "    def push(self, state, action, reward, next_state, done, goal):\n",
+    "        experience = (state, action, reward, next_state, done, goal)\n",
+    "        if len(self.buffer) < self.buffer_size:\n",
+    "            self.buffer.append(experience)\n",
+    "        else:\n",
+    "            self.buffer[self.idx] = experience\n",
+    "            self.idx = (self.idx + 1) % self.buffer_size\n",
+    "\n",
+    "    def sample(self, batch_size):\n",
+    "        samples = random.sample(self.buffer, batch_size)\n",
+    "        states, actions, rewards, next_states, dones, goals = zip(*samples)\n",
+    "        return states, actions, rewards, next_states, dones, goals\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.buffer)\n",
+    "\n",
+    "class HER:\n",
+    "    def __init__(self, env, q_network, buffer_size=1000000, batch_size=128, gamma=0.99, alpha=0.001, eps=0.9, her_k=4, n_epochs=50):\n",
+    "        self.env = env\n",
+    "        self.q_network = q_network\n",
+    "        self.replay_buffer = HERReplayBuffer(buffer_size)\n",
+    "        self.batch_size = batch_size\n",
+    "        self.gamma = gamma\n",
+    "        self.alpha = alpha\n",
+    "        self.eps = eps\n",
+    "        self.her_k = her_k\n",
+    "        self.n_epochs = n_epochs\n",
+    "\n",
+    "    def train(self):\n",
+    "        for epoch in range(self.n_epochs):\n",
+    "            self.env.reset()\n",
+    "            state = self.env.get_state()\n",
+    "            done = False\n",
+    "            steps = 0\n",
+    "\n",
+    "            while not done:\n",
+    "                steps += 1\n",
+    "                action = self.select_action(state)\n",
+    "                next_state, reward, done = self.env.step(action)\n",
+    "                goal = self.env.get_goal()\n",
+    "\n",
+    "                self.replay_buffer.push(state, action, reward, next_state, done, goal)\n",
+    "\n",
+    "                if len(self.replay_buffer) >= self.batch_size:\n",
+    "                    self.update_q_network()\n",
+    "\n",
+    "                state = next_state\n",
+    "\n",
+    "            print(f\"Epoch {epoch}: steps={steps}\")\n",
+    "\n",
+    "    def update_q_network(self):\n",
+    "        states, actions, rewards, next_states, dones, goals = self.replay_buffer.sample(self.batch_size)\n",
+    "\n",
+    "        states = np.array(states)\n",
+    "        actions = np.array(actions)\n",
+    "        rewards = np.array(rewards)\n",
+    "        next_states = np.array(next_states)\n",
+    "        dones = np.array(dones)\n",
+    "        goals = np.array(goals)\n",
+    "\n",
+    "        q_values = self.q_network.predict(states)\n",
+    "        q_values_next = self.q_network.predict(next_states)\n",
+    "\n",
+    "        max_q_values_next = np.max(q_values_next, axis=1)\n",
+    "        targets = q_values.copy()\n",
+    "\n",
+    "        for i in range(self.batch_size):\n",
+    "            if dones[i]:\n",
+    "                targets[i][actions[i]] = rewards[i]\n",
+    "            else:\n",
+    "                future_reward = self.gamma * max_q_values_next[i]\n",
+    "                targets[i][actions[i]] = rewards[i] + future_reward\n",
+    "\n",
+    "        self.q_network.train_on_batch(states, targets)\n",
+    "\n",
+    "    def select_action(self, state):\n",
+    "        if np.random.uniform() < self.eps:\n",
+    "            q_values = self.q_network.predict(np.array([state]))\n",
+    "            action = np.argmax(q_values)\n",
+    "        else:\n",
+    "            action = self.env.action_space.sample()\n",
+    "        return action\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -34,80 +145,50 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "# environment parameters\n",
-    "num_states = 10\n",
-    "num_actions = 2\n",
-    "\n",
-    "# replay buffer parameters\n",
-    "buffer_size = 1000\n",
-    "buffer_index = 0\n",
-    "replay_buffer = np.zeros((buffer_size, 4))  # state, action, reward, next_state\n",
-    "\n",
-    "# Q-network parameters\n",
-    "q_network = np.zeros((num_states, num_actions))\n",
-    "\n",
-    "# training parameters\n",
-    "epsilon = 0.1\n",
-    "max_timesteps = 100\n",
-    "batch_size = 32\n",
-    "learning_rate = 0.1\n",
-    "discount_factor = 0.99\n",
-    "num_episodes = 1000\n",
-    "\n",
-    "# training loop\n",
-    "for episode in range(num_episodes):\n",
-    "    state = 0\n",
-    "    goal = num_states - 1\n",
-    "    episode_buffer = []\n",
-    "    timestep = 0\n",
-    "    done = False\n",
+    "def train_her_q_learning(num_episodes, max_steps, batch_size, alpha, gamma, beta, goal):\n",
+    "    \"\"\"\n",
+    "    Train a Q-learning agent using Hindsight Experience Replay (HER) on a gym environment.\n",
+    "    \"\"\"\n",
+    "    # Initialize replay buffer\n",
+    "    replay_buffer = HERReplayBuffer()\n",
     "    \n",
-    "    while not done and timestep < max_timesteps:\n",
-    "        # choose action based on Q-network and exploration rate\n",
-    "        if np.random.random() < epsilon:\n",
-    "            action = np.random.randint(num_actions)\n",
-    "        else:\n",
-    "            print(state, q_network[state])\n",
-    "            action = np.argmax(q_network[state])\n",
+    "    # Initialize Q-table\n",
+    "    Q = defaultdict(lambda: np.zeros(env.action_space.n))\n",
+    "    \n",
+    "    for episode in range(num_episodes):\n",
+    "        # Reset environment and get initial state\n",
+    "        state = env.reset()\n",
+    "        goal_state = goal(env)\n",
+    "        episode_reward = 0\n",
     "        \n",
-    "        # take action and observe next state and reward\n",
-    "        if action == 0:\n",
-    "            next_state = state - 1\n",
-    "            reward = -1\n",
-    "        else:\n",
-    "            next_state = state + 1\n",
-    "            reward = 1\n",
-    "        \n",
-    "        # add transition to episode buffer and replay buffer\n",
-    "        episode_buffer.append((state, action, reward, next_state))\n",
-    "        replay_buffer[buffer_index] = (state, action, reward, next_state)\n",
-    "        buffer_index = (buffer_index + 1) % buffer_size\n",
-    "        \n",
-    "        # update Q-network with minibatch of transitions\n",
-    "        if buffer_index >= batch_size:\n",
-    "            minibatch = replay_buffer[np.random.choice(buffer_size, batch_size)]\n",
-    "            for transition in minibatch:\n",
-    "                s, a, r, s_prime = transition\n",
-    "                target = r + discount_factor * np.max(q_network[s_prime])\n",
-    "                q_network[s, a] = (1 - learning_rate) * q_network[s, a] + learning_rate * target\n",
-    "        \n",
-    "        # update state and timestep\n",
-    "        state = next_state\n",
-    "        timestep += 1\n",
-    "        \n",
-    "        # check if episode is done\n",
-    "        if state == goal or timestep == max_timesteps:\n",
-    "            done = True\n",
+    "        for t in range(max_steps):\n",
+    "            # Choose action\n",
+    "            action = epsilon_greedy(Q, state, env.action_space.n, epsilon)\n",
     "            \n",
-    "            # update replay buffer with hindsight replay\n",
-    "            for i in range(len(episode_buffer)):\n",
-    "                s, a, r, s_prime = episode_buffer[i]\n",
-    "                new_reward = -1 if i < len(episode_buffer) - 1 else reward\n",
-    "                new_transition = (s, a, new_reward, s_prime)\n",
-    "                replay_buffer[buffer_index] = new_transition\n",
-    "                buffer_index = (buffer_index + 1) % buffer_size"
+    "            # Take action and observe next state and reward\n",
+    "            next_state, reward, done, _ = env.step(action)\n",
+    "            \n",
+    "            # Add transition to replay buffer\n",
+    "            transition = (state, action, reward, next_state, done, goal_state)\n",
+    "            replay_buffer.add(transition)\n",
+    "            \n",
+    "            # Update Q-table using experience replay\n",
+    "            if len(replay_buffer) >= batch_size:\n",
+    "                batch = replay_buffer.sample(batch_size)\n",
+    "                her_batch = HER(batch, replay_buffer, goal_state)\n",
+    "                for her_transition in her_batch:\n",
+    "                    s, a, r, s_prime, done, goal_s = her_transition\n",
+    "                    td_error = r + gamma * np.max(Q[s_prime, :]) - Q[s, a]\n",
+    "                    Q[s, a] += alpha * td_error\n",
+    "            \n",
+    "            state = next_state\n",
+    "            episode_reward += reward\n",
+    "            \n",
+    "            if done:\n",
+    "                break\n",
+    "        \n",
+    "        # Print episode reward\n",
+    "        print(f\"Episode {episode+1} reward: {episode_reward}\")\n"
    ]
   }
  ],
