--- a/hindsight_experience_replay.ipynb
+++ b/hindsight_experience_replay.ipynb
@@ -18,9 +18,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "import numpy as np\n",
-    "\n",
     "class HERReplayBuffer:\n",
     "    def __init__(self, buffer_size):\n",
     "        self.buffer_size = buffer_size\n",
@@ -108,7 +105,7 @@
     "            action = np.argmax(q_values)\n",
     "        else:\n",
     "            action = self.env.action_space.sample()\n",
-    "        return action\n"
+    "        return action"
    ]
   },
   {
