hindsight_experience_replay

--- a/hindsight_experience_replay.ipynb
+++ b/hindsight_experience_replay.ipynb
@@ -149,6 +149,16 @@
     "    # Initialize replay buffer\n",
     "    replay_buffer = HERReplayBuffer()\n",
     "    \n",
+    "    def epsilon_greedy(Q, state, num_actions, epsilon):\n",
+    "        \"\"\"\n",
+    "        Epsilon-greedy policy.\n",
+    "        \"\"\"\n",
+    "        if np.random.uniform() < epsilon:\n",
+    "            action = np.argmax(Q[state, :])\n",
+    "        else:\n",
+    "            action = np.random.randint(num_actions)\n",
+    "        return action\n",
+    "    \n",
     "    # Initialize Q-table\n",
     "    Q = defaultdict(lambda: np.zeros(env.action_space.n))\n",
     "    \n",
