--- a/hindsight_experience_replay.ipynb
+++ b/hindsight_experience_replay.ipynb
@@ -18,6 +18,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "env = gym.make('CartPole-v0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class HERReplayBuffer:\n",
     "    def __init__(self, buffer_size):\n",
     "        self.buffer_size = buffer_size\n",
