hindsight_experience_replay.ipynb

--- a/hindsight_experience_replay.ipynb
+++ b/hindsight_experience_replay.ipynb
@@ -2,28 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
     "import numpy as np\n",
     "import random\n",
-    "import gym "
+    "import gym"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Alli Ajagbe\\anaconda3\\lib\\site-packages\\gym\\envs\\registration.py:555: UserWarning: \u001b[33mWARN: The environment CartPole-v0 is out of date. You should consider upgrading to version `v1`.\u001b[0m\n",
+      "  logger.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "env = gym.make('CartPole-v0')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,37 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 [0. 0.]\n",
-      "-1 [0. 0.]\n",
-      "-2 [0. 0.]\n",
-      "-3 [0. 0.]\n",
-      "-4 [0. 0.]\n",
-      "-5 [0. 0.]\n",
-      "-7 [0. 0.]\n",
-      "-8 [0. 0.]\n",
-      "-9 [0. 0.]\n",
-      "-10 [0. 0.]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index -11 is out of bounds for axis 0 with size 10",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 36\u001b[0m\n\u001b[0;32m     34\u001b[0m     action \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(num_actions)\n\u001b[0;32m     35\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 36\u001b[0m     \u001b[39mprint\u001b[39m(state, q_network[state])\n\u001b[0;32m     37\u001b[0m     action \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margmax(q_network[state])\n\u001b[0;32m     39\u001b[0m \u001b[39m# take action and observe next state and reward\u001b[39;00m\n",
-      "\u001b[1;31mIndexError\u001b[0m: index -11 is out of bounds for axis 0 with size 10"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def train_her_q_learning(num_episodes, max_steps, batch_size, alpha, gamma, beta, goal):\n",
     "    \"\"\"\n",
@@ -205,6 +186,16 @@
     "        \n",
     "        # Print episode reward\n",
     "        print(f\"Episode {episode+1} reward: {episode_reward}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env = gym.make('CartPole-v1')\n",
+    "train_her_q_learning(num_episodes=1000, max_steps=500, batch_size=32, alpha=0.1, gamma=0.99, beta=0.8, goal=get_cartpole_goal)"
    ]
   }
  ],
