--- a/hindsight_experience_replay.ipynb
+++ b/hindsight_experience_replay.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,25 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Alli Ajagbe\\anaconda3\\lib\\site-packages\\gym\\envs\\registration.py:555: UserWarning: \u001b[33mWARN: The environment CartPole-v0 is out of date. You should consider upgrading to version `v1`.\u001b[0m\n",
-      "  logger.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "env = gym.make('CartPole-v0')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,25 +181,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 1 required positional argument: 'buffer_size'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m env \u001b[39m=\u001b[39m gym\u001b[39m.\u001b[39mmake(\u001b[39m'\u001b[39m\u001b[39mCartPole-v1\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m train_her_q_learning(num_episodes\u001b[39m=\u001b[39;49m\u001b[39m1000\u001b[39;49m, max_steps\u001b[39m=\u001b[39;49m\u001b[39m500\u001b[39;49m, batch_size\u001b[39m=\u001b[39;49m\u001b[39m32\u001b[39;49m, alpha\u001b[39m=\u001b[39;49m\u001b[39m0.1\u001b[39;49m, gamma\u001b[39m=\u001b[39;49m\u001b[39m0.99\u001b[39;49m, beta\u001b[39m=\u001b[39;49m\u001b[39m0.8\u001b[39;49m, goal\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mget_cartpole_goal\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "Cell \u001b[1;32mIn[6], line 6\u001b[0m, in \u001b[0;36mtrain_her_q_learning\u001b[1;34m(num_episodes, max_steps, batch_size, alpha, gamma, beta, goal)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mTrain a Q-learning agent using Hindsight Experience Replay (HER) on a gym environment.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[39m# Initialize replay buffer\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m replay_buffer \u001b[39m=\u001b[39m HERReplayBuffer()\n\u001b[0;32m      8\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mepsilon_greedy\u001b[39m(Q, state, num_actions, epsilon):\n\u001b[0;32m      9\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[39m    Epsilon-greedy policy.\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'buffer_size'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "env = gym.make('CartPole-v1')\n",
-    "train_her_q_learning(num_episodes=1000, max_steps=500, batch_size=32, alpha=0.1, gamma=0.99, beta=0.8, goal='get_cartpole_goal')"
+    "train_her_q_learning(num_episodes=1000, max_steps=500, batch_size=32, alpha=0.1, gamma=0.99, beta=0.8, goal=get_cartpole_goal)"
    ]
   },
   {
